--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 sourceCompatibility = 11
 targetCompatibility = 11
 group = 'dev.angerm.grpc.prometheus'
-version= "0.1.3-SNAPSHOT"
+version= "1.0.0"
 
 dependencies {
     ['simpleclient',
